[metadata]
name = mfvis
version = 1.0.2
author = Maximilian Wolf
author_email = maximilianwolf.0412@gmail.com
description = Plotting and analyzing various fuzzy-logic membership-functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MaxWolf-01/Membership-function-visualization
project_urls =
    Bug Tracker = https://github.com/MaxWolf-01/Membership-function-visualization/issues
    Source = https://github.com/MaxWolf-01/Membership-function-visualization
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mfvis
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    sympy

[options.entry_points]
console_scripts =
    m-funcs = mfvis:__main__.main

[options.packages.find]
where = mfivs